--- a/src/test/java/tests/pom.xml
+++ b/src/test/java/tests/pom.xml
@@ -15,5 +15,13 @@
             <artifactId>selenium-java</artifactId>
             <version>4.18.1</version>
         </dependency>
+             <!-- TestNG -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.10.2</version>
+    <scope>test</scope>
+</dependency>
+
     </dependencies>
 </project>
